# workout-tracker

./: README.md  pyproject.toml  test_manual.py
src/workout_tracker/: __init__.py  exercises.py
tests/: test_exercises.py  test_workout.py
